--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="hero container occupy-space flex-column">
 ​
             <header>
-              <h2><a href="#"><i class="Brand"></i>Your Favorite Sport in Dublin!</a></h2>
+              <h2><a href="#"><i class="Brand"></i>Join Our Family!</a></h2>
               <nav>
                 <ul>
                   <li>
