--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome To Our Studio!</div>
-                <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
-                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+                <div class="masthead-subheading">Welcome to Our Family</div>
+                <div class="masthead-heading text-uppercase">Martial Arts House</div>
+                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="./registration.html">Become a member</a>
             </div>
         </header>
         <!-- Services-->
