new update services

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <i class="fas fa-calendar fa-stack-1x fa-inverse"></i>
                             </span>
                             <h4 class="my-3">Activities</h4>
-                            <p class="text-muted">Dive into our different activities and find the most suitable martial art for you. From Karate to Jiu-Jitsu there's a whole new world waiting for you!</p>
+                            <p class="text-muted">Check out our current activities and discover your new favourite sport!</p>
                         </a>
                     </div>
                     <div class="col-md-4">
@@ -78,7 +78,7 @@
                                 <i class="fas fa-users fa-stack-1x fa-inverse"></i>
                             </span>
                             <h4 class="my-3">Our team</h4>
-                            <p class="text-muted">Our team is conformed of expert professionals with many years of experience and recognition in the field of the martial arts. </p>
+                            <p class="text-muted">At Martial Arts House you will find a team of experts and recognized professionals ready to help you pursue your goals.</p>
                         </a>
                     </div>
                 </div>
