--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Jiu-Jitsu 3 Name</div>
+                                <div class="portfolio-caption-heading">Jiu-Jitsu</div>
                                 <div class="portfolio-caption-subheading text-muted">Gi/No Gi</div>
                             </div>
                         </div>
