--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Kids</div>
-                                <div class="portfolio-caption-subheading text-muted">Discover our different classes.</div>
+                                <div class="portfolio-caption-subheading text-muted">For the little ones</div>
                             </div>
                         </div>
                     </div>
@@ -158,7 +158,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Ladies</div>
-                                <div class="portfolio-caption-subheading text-muted">Join our +200 women community.</div>
+                                <div class="portfolio-caption-subheading text-muted">Growing a community of women in MA</div>
                             </div>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Bootcamp</div>
-                                <div class="portfolio-caption-subheading text-muted">Prepare for your next competition with us.</div>
+                                <div class="portfolio-caption-subheading text-muted">Prepare your next competition with us</div>
                             </div>
                         </div>
                     </div>
