--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Agency - Start Bootstrap Theme</title>
+        <title>Martial Arts House</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -400,14 +400,14 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Activity Details Go Here-->
-                                    <h2 class="text-uppercase">Activity 4</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Kids Classes</h2>
+                                    <p class="item-intro text-muted">Classes for the little ones of our family</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/04-full.jpg" alt="" />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Our kids classes are designed for the little ones in our families. Theres many benefits of practicing Martial Arts from early stages in our lives. The kids will have the opportunity to socialize while learning a new skill.</p>
                                     <ul class="list-inline">
-                                        <li>Date: January 2020</li>
-                                        <li>Mon - Sat: 8am - 10am</li>
-                                        <li>Category: Taichi</li>
+                                        <li>Date: April 2021</li>
+                                        <li>Mon - Sat: 10am - 5pm</li>
+                                        <li>Category: Kids Classes</li>
                                     </ul>
                                     <a href="./registration.html">
                                         <button class="btn btn-primary" type="button">
@@ -431,10 +431,10 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Activity Details Go Here-->
-                                    <h2 class="text-uppercase">Activity 5</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Bootcamp</h2>
+                                    <p class="item-intro text-muted">Prepare your next competition with us</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/05-full.jpg" alt="" />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Join our Boot-Camps and be ready for your next competition with our best trainers and methodologies. During this intensive trainings you will have the opportunity to prepare your next competitions directly with our best teachers and experts in the field.</p>
                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
                                         <li>Mon - Sat: 8am - 10am</li>
