--- a/index.html
+++ b/index.html
@@ -184,47 +184,47 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Fees</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Choose the plan that works best for you</h3>
                 </div>
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Plan 1</h4>
-                                <h4 class="subheading">Lorem ipsum</h4>
+                                <h4>Pay & Go</h4>
+                                <h4 class="subheading">15€</h4>
                             </div>
-                            <div class="timeline-Our Humble Beginningsbody"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-Our Humble Beginningsbody"><p class="text-muted">Choosing this option will allow you to attend to 1 hour of any class of your choosing. It's a good way to try as many different classess until you find the one you like!</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Plan 2</h4>
-                                <h4 class="subheading">Lorem ipsum</h4>
+                                <h4>Starter Pack</h4>
+                                <h4 class="subheading">155€</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">The starter pack consists of 4 hours per month of 1 Martial Art of your choosing and includes a Kimono and belt for the chosen Martial Art (valued in more than 200€). If you decide to continue practicing after that month you can keep the clothes for free.</p></div>
                         </div>
                     </li>
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Plan 3</h4>
-                                <h4 class="subheading">Lorem ipsum</h4>
+                                <h4>Quarterly Plan</h4>
+                                <h4 class="subheading">160€</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">If you have found your favourite Martial Art and want to master your skills chose this plan and you will keep your 4 hours per month spot for the entire quarter - even if you can't come to some classes!</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Plan 4</h4>
-                                <h4 class="subheading">Lorem ipsum</h4>
+                                <h4>Free Pass</h4>
+                                <h4 class="subheading">459€</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">We love free spirits - come to any of our classes at any time and day during the current quarter. </p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
