--- a/index.html
+++ b/index.html
@@ -204,17 +204,17 @@
                                 <h4>Starter Pack</h4>
                                 <h4 class="subheading">155€</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">The starter pack consists of 4 hours per month of 1 Martial Art of your choosing and includes a Kimono and belt for the chosen Martial Art (valued in more than 200€). If you decide to continue practicing after that month you can keep the clothes for free.</p></div>
+                            <div class="timeline-body"><p class="text-muted">This pack consists of 4 hours per month of 1 Martial Art of your choosing. This includes a free Kimono and a belt (valued in more than 200€). If you decide to become a member you can keep them!</p></div>
                         </div>
                     </li>
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Quarterly Plan</h4>
+                                <h4>Members Plan</h4>
                                 <h4 class="subheading">160€</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">If you have found your favourite Martial Art and want to master your skills chose this plan and you will keep your 4 hours per month spot for the entire quarter - even if you can't come to some classes!</p></div>
+                            <div class="timeline-body"><p class="text-muted">If you have found your favourite Martial Art make sure to secure your spot with this plan for the entire quarter - even if you can't come to some classes!</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
