--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                                 <h4>Free Pass</h4>
                                 <h4 class="subheading">459€</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">We love free spirits - come to any of our classes at any time and day during the current quarter. </p></div>
+                            <div class="timeline-body"><p class="text-muted">We love free spirits - come to any of our classes at any time during the current quarter. </p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -285,7 +285,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-left">Martial Arts House</div>
-                    <div class="col-lg-4 text-lg-left">Address Line 1 a bit long, lorem ipsum 89909</div>
+                    <div class="col-lg-4 text-lg-left">George Street, Dublin 22 A589</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
