--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                                     <h2 class="text-uppercase">Kids Classes</h2>
                                     <p class="item-intro text-muted">Classes for the little ones of our family</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/04-full.jpg" alt="" />
-                                    <p>Our kids classes are designed for the little ones in our families. Theres many benefits of practicing Martial Arts from early stages in our lives. The kids will have the opportunity to socialize while learning a new skill.</p>
+                                    <p>Our kids classes are designed for the little ones in our families. There is many benefits of practicing Martial Arts from early stages in our lives. The kids will have the opportunity to socialize while learning a new skill.</p>
                                     <ul class="list-inline">
                                         <li>Date: April 2021</li>
                                         <li>Mon - Sat: 10am - 5pm</li>
@@ -431,10 +431,10 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Activity Details Go Here-->
-                                    <h2 class="text-uppercase">Bootcamp</h2>
-                                    <p class="item-intro text-muted">Prepare your next competition with us</p>
+                                    <h2 class="text-uppercase">Women</h2>
+                                    <p class="item-intro text-muted">Growing community for women in MA</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/05-full.jpg" alt="" />
-                                    <p>Join our Boot-Camps and be ready for your next competition with our best trainers and methodologies. During this intensive trainings you will have the opportunity to prepare your next competitions directly with our best teachers and experts in the field.</p>
+                                    <p>We are a growing community of more than 200 women in Martial Arts. In this space you will start, continue and master your skills in a challenging and motivating environment.</p>
                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
                                         <li>Mon - Sat: 8am - 10am</li>
@@ -462,10 +462,10 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Activity Details Go Here-->
-                                    <h2 class="text-uppercase">Activity 6</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Bootcamp</h2>
+                                    <p class="item-intro text-muted">Prepare your next competition with us</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/06-full.jpg" alt="" />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Join our Boot-Camps and be ready for your next competition with our best trainers and methodologies. During this intensive trainings you will have the opportunity to prepare your next competitions directly with our best teachers and experts in the field.</p>
                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
                                         <li>Mon - Sat: 8am - 10am</li>
