--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome to Our Family</div>
+                <div class="masthead-subheading">Develop Your Human Potential</div>
                 <div class="masthead-heading text-uppercase">Martial Arts House</div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="./registration.html">Become a member</a>
             </div>
