modify activities and fees

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <i class="fas fa-calendar fa-stack-1x fa-inverse"></i>
                             </span>
                             <h4 class="my-3">Activities</h4>
-                            <p class="text-muted">Check out our current activities and discover your new favourite sport!</p>
+                            <p class="text-muted">We are proud to bring you personalized activities based on the most famous and recognized Martial Arts worldwide. We are excited to help you discover your new favourite sport!</p>
                         </a>
                     </div>
                     <div class="col-md-4">
@@ -68,7 +68,7 @@
                                 <i class="fas fa-credit-card fa-stack-1x fa-inverse"></i>
                             </span>
                             <h4 class="my-3">Fees</h4>
-                            <p class="text-muted">Find more about our fees and prices.</p>
+                            <p class="text-muted">Our fees options are designed to allow you upskill your game with easy options for your choosing.</p>
                         </a>
                     </div>
                     <div class="col-md-4">
@@ -78,7 +78,7 @@
                                 <i class="fas fa-users fa-stack-1x fa-inverse"></i>
                             </span>
                             <h4 class="my-3">Our team</h4>
-                            <p class="text-muted">At Martial Arts House you will find a team of experts and recognized professionals ready to help you pursue your goals.</p>
+                            <p class="text-muted">At Martial Arts House our team is decided to make you feel part of the family. We are a group of experts and recognized professionals excited to help you pursue your goals.</p>
                         </a>
                     </div>
                 </div>
@@ -438,7 +438,7 @@
                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
                                         <li>Mon - Sat: 8am - 10am</li>
-                                        <li>Category: Taichi</li>
+                                        <li>Category: Martial Arts</li>
                                     </ul>
                                     <a href="./registration.html">
                                         <button class="btn btn-primary" type="button">
@@ -469,7 +469,7 @@
                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
                                         <li>Mon - Sat: 8am - 10am</li>
-                                        <li>Category: Taichi</li>
+                                        <li>Category: Bootcamp</li>
                                     </ul>
                                     <a href="./registration.html">
                                         <button class="btn btn-primary" type="button">
