--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="a men and a woman laying on the floor with martial arts clothes and grappling." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Karate</div>
@@ -112,7 +112,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt="two young men standing in front of each other with martial art gear made of neopren and they are about to fight." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Aikido</div>
@@ -126,7 +126,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt="a woman standing up wearing martial arts white clothes and a black belt and she is doing a martial art pose" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Jiu-Jitsu</div>
@@ -140,7 +140,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt="a man dressed in a white martial arts kimono raising his leg while doing a martial arts pose." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Kids</div>
@@ -154,7 +154,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="a men in a white Karate kimono holding two black clubs doing a martial arts pose." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Women</div>
@@ -168,7 +168,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="a man standing up straight in a white martial arts kimono and with his hands on his hips" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Bootcamp</div>
