--- a/index.html
+++ b/index.html
@@ -287,9 +287,9 @@
                     <div class="col-lg-4 text-lg-left">Martial Arts House</div>
                     <div class="col-lg-4 text-lg-left">George Street, Dublin 22 A589</div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com" target="_blank" rel="noreferrer noopener"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://facebook.com" target="_blank" rel="noreferrer noopener"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://linkedin.com" target="_blank" rel="noreferrer noopener"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                     <div class="col-lg-4 text-lg-right">
                     </div>
