--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/fees1.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Pay & Go</h4>
@@ -316,11 +316,9 @@
                                         <li>Mon - Sat: 8am - 10am</li>
                                         <li>Category: Karate</li>
                                     </ul>
-                                    <a href="./registration.html">
-                                        <button class="btn btn-primary" type="button">
+                                        <button class="btn btn-primary" type="button" onclick="location.href = 'registration.html';">
                                             Register
                                         </button>
-                                    </a>
                                 </div>
                             </div>
                         </div>
