--- a/registration.html
+++ b/registration.html
@@ -92,4 +92,20 @@
                     </div>
                 </form>
             </div>
-        </section>
+        </section>\
+        <!-- Footer-->
+        <footer class="footer py-4">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-4 text-lg-left">Martial Arts House</div>
+                    <div class="col-lg-4 text-lg-left">George Street, Dublin 22 A589</div>
+                    <div class="col-lg-4 my-3 my-lg-0">
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                    <div class="col-lg-4 text-lg-right">
+                    </div>
+                </div>
+            </div>
+        </footer>
