--- a/activities-schedule.html
+++ b/activities-schedule.html
@@ -188,3 +188,200 @@
                 </form>
             </div>
         </section>
+                <!-- Activities Modals-->
+        <!-- Modal 1-->
+        <div class="portfolio-modal modal fade" id="activityModal1" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <div class="modal-body">
+                                    <!-- Activity Details Go Here-->
+                                    <h2 class="text-uppercase">Karate</h2>
+                                    <p class="item-intro text-muted">Shotokan</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/01-full.jpg" alt="" />
+                                    <p>Shotokan is a style of karate, founded in 1938 and developed from various martial arts by Gichin Funakoshi and his son Gigo Funakoshi. Karate practice strengthens the mind, develops composure, a clearer thought process, deeper insight into one's mental capabilities, and more self-confidence.</p>
+                                    <ul class="list-inline">
+                                        <li>April 2021</li>
+                                        <li>Mon - Sat: 8am - 10am</li>
+                                        <li>Category: Karate</li>
+                                    </ul>
+                                        <button class="btn btn-primary" type="button" onclick="location.href = 'registration.html';">
+                                            Register
+                                        </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal 2-->
+        <div class="portfolio-modal modal fade" id="activityModal2" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <div class="modal-body">
+                                    <!-- Activity Details Go Here-->
+                                    <h2 class="text-uppercase">Aikido</h2>
+                                    <p class="item-intro text-muted">Aikikai</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/02-full.jpg" alt="" />
+                                    <p>The Aikikai is the original school of Aikido and was founded in 1948. It is centered on the Aikikai Foundation in Japan, and its figurehead is the Doshu (the family heir of the founder of Aikido).</p>
+                                    <ul class="list-inline">
+                                        <li>Date: April 2021</li>
+                                        <li>Mon - Sat: 2pm - 8pm</li>
+                                        <li>Category: Aikido</li>
+                                    </ul>
+                                    <a href="./registration.html">
+                                        <button class="btn btn-primary" type="button">
+                                            Register
+                                        </button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal 3-->
+        <div class="portfolio-modal modal fade" id="activityModal3" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <div class="modal-body">
+                                    <!-- Activity Details Go Here-->
+                                    <h2 class="text-uppercase">Jiu-Jitsu</h2>
+                                    <p class="item-intro text-muted">Gi/No Gi</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/03-full.jpg" alt="" />
+                                    <p>Jiu-Jitsu is a self-defence martial art and combat sport based on grappling and submission holds. It focuses on the skill of taking an opponent to the ground, controlling one's opponent, gaining a dominant position and using a number of techniques to force them into submission via joint locks or chokeholds.</p>
+                                    <ul class="list-inline">
+                                        <li>Date: May 2021</li>
+                                        <li>Mon - Sat: 10am - 7pm</li>
+                                        <li>Category: Jiu-Jitsu</li>
+                                    </ul>
+                                    <a href="./registration.html">
+                                        <button class="btn btn-primary" type="button">
+                                            Register
+                                        </button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal 4-->
+        <div class="portfolio-modal modal fade" id="activityModal4" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <div class="modal-body">
+                                    <!-- Activity Details Go Here-->
+                                    <h2 class="text-uppercase">Kids Classes</h2>
+                                    <p class="item-intro text-muted">Classes for the little ones of our family</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/04-full.jpg" alt="" />
+                                    <p>Our kids classes are designed for the little ones in our families. There is many benefits of practicing Martial Arts from early stages in our lives. The kids will have the opportunity to socialize while learning a new skill.</p>
+                                    <ul class="list-inline">
+                                        <li>Date: April 2021</li>
+                                        <li>Mon - Sat: 10am - 5pm</li>
+                                        <li>Category: Kids Classes</li>
+                                    </ul>
+                                    <a href="./registration.html">
+                                        <button class="btn btn-primary" type="button">
+                                            Register
+                                        </button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal 5-->
+        <div class="portfolio-modal modal fade" id="activityModal5" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <div class="modal-body">
+                                    <!-- Activity Details Go Here-->
+                                    <h2 class="text-uppercase">Women</h2>
+                                    <p class="item-intro text-muted">Growing community for women in MA</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/05-full.jpg" alt="" />
+                                    <p>We are a growing community of more than 200 women in Martial Arts. In this space you will start, continue and master your skills in a challenging and motivating environment.</p>
+                                    <ul class="list-inline">
+                                        <li>Date: January 2020</li>
+                                        <li>Mon - Sat: 8am - 10am</li>
+                                        <li>Category: Martial Arts</li>
+                                    </ul>
+                                    <a href="./registration.html">
+                                        <button class="btn btn-primary" type="button">
+                                            Register
+                                        </button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal 6-->
+        <div class="portfolio-modal modal fade" id="activityModal6" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <div class="modal-body">
+                                    <!-- Activity Details Go Here-->
+                                    <h2 class="text-uppercase">Bootcamp</h2>
+                                    <p class="item-intro text-muted">Prepare your next competition with us</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/06-full.jpg" alt="" />
+                                    <p>Join our Boot-Camps and be ready for your next competition with our best trainers and methodologies. During this intensive trainings you will have the opportunity to prepare your next competitions directly with our best teachers and experts in the field.</p>
+                                    <ul class="list-inline">
+                                        <li>Date: January 2020</li>
+                                        <li>Mon - Sat: 8am - 10am</li>
+                                        <li>Category: Bootcamp</li>
+                                    </ul>
+                                    <a href="./registration.html">
+                                        <button class="btn btn-primary" type="button">
+                                            Register
+                                        </button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Third party plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <!-- Contact form JS-->
+        <script src="assets/mail/jqBootstrapValidation.js"></script>
+        <script src="assets/mail/contact_me.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
+</html>
