--- a/activities-schedule.html
+++ b/activities-schedule.html
@@ -39,9 +39,9 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Activities Schedule</div>
-                <div class="masthead-heading text-uppercase">Lorem ipsum dolor sit amet</div>
-                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Become a member</a>
+                <div class="masthead-subheading">Develop Your Human Potential</div>
+                <div class="masthead-heading text-uppercase">Martial Arts House</div>
+                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="./registration.html">Become a member</a>
             </div>
         </header>
         <!-- Portfolio Grid-->
