--- a/activities-schedule.html
+++ b/activities-schedule.html
@@ -48,8 +48,8 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Find more activities</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Our actitivites</h2>
+                    <h3 class="section-subheading text-muted">Click on each activity to discover more details</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -58,11 +58,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="a men and a woman laying on the floor with martial arts clothes and grappling." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Activity 1 Name</div>
-                                <div class="portfolio-caption-subheading text-muted">Aikido</div>
+                                <div class="portfolio-caption-heading">Karate</div>
+                                <div class="portfolio-caption-subheading text-muted">Shotokan</div>
                             </div>
                         </div>
                     </div>
@@ -72,11 +72,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt="two young men standing in front of each other with martial art gear made of neopren and they are about to fight." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Activity 2 Name</div>
-                                <div class="portfolio-caption-subheading text-muted">Karate</div>
+                                <div class="portfolio-caption-heading">Aikido</div>
+                                <div class="portfolio-caption-subheading text-muted">Aikikai</div>
                             </div>
                         </div>
                     </div>
@@ -86,11 +86,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt="a men in a white Karate kimono holding two black clubs doing a martial arts pose." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Activity 3 Name</div>
-                                <div class="portfolio-caption-subheading text-muted">Activity Category</div>
+                                <div class="portfolio-caption-heading">Jiu-Jitsu</div>
+                                <div class="portfolio-caption-subheading text-muted">Gi/No Gi</div>
                             </div>
                         </div>
                     </div>
@@ -100,11 +100,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt="a man dressed in a white martial arts kimono raising his leg while doing a martial arts pose." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Activity 4 Name</div>
-                                <div class="portfolio-caption-subheading text-muted">Activity Category</div>
+                                <div class="portfolio-caption-heading">Kids</div>
+                                <div class="portfolio-caption-subheading text-muted">For the little ones</div>
                             </div>
                         </div>
                     </div>
@@ -117,8 +117,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Activity 5 Name</div>
-                                <div class="portfolio-caption-subheading text-muted">Activity Category</div>
+                                <div class="portfolio-caption-heading">Women</div>
+                                <div class="portfolio-caption-subheading text-muted">Growing community for women in MA</div>
                             </div>
                         </div>
                     </div>
@@ -128,11 +128,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="a man standing up straight in a white martial arts kimono and with his hands on his hips" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Activity 6 Name</div>
-                                <div class="portfolio-caption-subheading text-muted">Activity Category</div>
+                                <div class="portfolio-caption-heading">Bootcamp</div>
+                                <div class="portfolio-caption-subheading text-muted">Prepare your next competition with us</div>
                             </div>
                         </div>
                     </div>
