--- a/activities-schedule.html
+++ b/activities-schedule.html
@@ -114,7 +114,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="a woman standing up wearing martial arts white clothes and a black belt and she is doing a martial art pose" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Women</div>
