--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Welcome to our dojo</h2>
-                    <h3 class="section-subheading text-muted">Start your journey today</h3>
+                    <h3 class="section-subheading text-muted">Your Journey Starts Today</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -126,7 +126,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt="a woman standing up wearing martial arts white clothes and a black belt and she is doing a martial art pose" />
+                                <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt="a men in a white Karate kimono holding two black clubs doing a martial arts pose." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Jiu-Jitsu</div>
@@ -154,7 +154,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="a men in a white Karate kimono holding two black clubs doing a martial arts pose." />
+                                <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="a woman standing up wearing martial arts white clothes and a black belt and she is doing a martial art pose" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Women</div>
