--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Welcome to our dojo</h2>
-                    <h3 class="section-subheading text-muted">Your Journey Starts Today</h3>
+                    <h3 class="section-subheading text-muted">Your journey starts today</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
